--- a/src/styles/media-header.less
+++ b/src/styles/media-header.less
@@ -202,10 +202,16 @@
                         text-align: center;
                         // border: 1px solid black;    
                     }
+                    // .nav-menu ul li ul li {
+                    //     padding: 5px 10px 5px 10px;/* отступы между блоками блока выезд */  
+                    //     border: none;
+                    //     margin: auto;
+                    // } 
                     .nav-menu ul li ul li {
-                        padding: 5px 10px 5px 10px;/* отступы между блоками блока выезд */  
+                        padding: 0px 10px 0px 10px;/* отступы между блоками блока выезд */  
                         border: none;
                         margin: auto;
+                        // transition: 0.3s linear;
                     } 
                     .nav-menu ul li .level-li-one {
                         margin-left: 1%;
@@ -222,23 +228,55 @@
                     .nav-menu ul li .level-li-five {
                         margin-left: -1109px;
                     }
+                    // .nav-menu ul li ul li a { 
+                    //     width: 270px;
+                    //     height: 34px;
+                    //     text-transform: uppercase;
+                    //     color: @color_white_main;
+                    //     font-size: @font-size_main - 2px;
+                    //     font-family: 'Roboto', sans-serif;
+                    //     font-weight: 400;
+                    //     text-align: left;
+                    //     padding: 0px 0px 0px 7px;
+                    //     line-height: 34px;
+                    //     background: @color_blue_main;
+                    //     transition: 0.2s linear;/* блоки в всплывающем  блоке выезд */ 
+                    // }
                     .nav-menu ul li ul li a { 
                         width: 270px;
                         height: 34px;
                         text-transform: uppercase;
-                        color: @color_white_main;
-                        font-size: @font-size_main;
+                        color: @color_blue_main;
+                        font-size: @font-size_main - 2px;
                         font-family: 'Roboto', sans-serif;
                         font-weight: 400;
                         text-align: left;
                         padding: 0px 0px 0px 7px;
                         line-height: 34px;
-                        background: @color_blue_main;
-                        transition: 0.5s linear;/* блоки в всплывающем  блоке выезд */ 
+                        background: @color_white_main;
+                        border-bottom: 1px solid @color_blue_main;
+                        transition: 0.7s linear;/* блоки в всплывающем  блоке выезд */ 
                     }
+                    // .nav-menu ul li ul li:hover {
+                    //     box-shadow:
+                    //     // 0px 5px 18px rgba(0, 0, 0, .3),
+                    //     // -23px 0 20px -28px rgba(0, 0, 0, .6),
+                    //     // 23px 0 20px -28px rgba(0, 0, 0, .6),
+                    //     inset 300px 0px 0px @color_blue_main * 1.5;
+                    //     transition: 0.3s linear;
+                    // }
                     .nav-menu ul li ul li a:hover {
-                        color: @color_yellow_main;
-                        transition: 0.5s linear; 
+                        color: @color_blue_main;
+                        // color: @color_yellow_main;
+                        border-bottom: 1px solid @color_dlue_tone_three_main;
+                       
+                        transition: 0.0s linear;
+                        // background: @color_white_main * 1.03; 
+                        box-shadow:
+                        // // // 0px 5px 18px rgba(0, 0, 0, .3),
+                        // // // -23px 0 20px -28px rgba(0, 0, 0, .6),
+                        // // // 23px 0 20px -28px rgba(0, 0, 0, .6),, 400px 0px 0px rgb(255, 255, 255)
+                        inset 300px 0px 0px @color_white_main * 1.022;
                     }
                     .nav-menu ul li  ul li ul li {
                         display: none;
@@ -283,7 +321,7 @@
                         padding: 17px 0px 17px 42px;/* отступы по периметру */  
                     }
                     .nav-menu ul li ul li {
-                        padding: 5px 10px 5px 10px;/* отступы между блоками */
+                        padding: 0px 10px 0px 10px;/* отступы между блоками */
                     } 
                 }
             }
@@ -317,7 +355,7 @@
                         padding: 17px 0px 17px 38px;/* отступы по периметру */ 
                     }
                     .nav-menu ul li ul li {
-                        padding: 5px 10px 5px 10px;/* отступы между блоками */
+                        padding: 0px 10px 0px 10px;/* отступы между блоками */
                     } 
                 }
             }
@@ -351,7 +389,7 @@
                         padding: 17px 0px 17px 32px;/* отступы по периметру */  
                     }
                     .nav-menu ul li ul li {
-                        padding: 5px 10px 5px 10px;/* отступы между блоками */
+                        padding: 0px 10px 0px 10px;/* отступы между блоками */
                     } 
                 }
             }
@@ -385,7 +423,7 @@
                         padding: 17px 0px 17px 28px;/* отступы по периметру */ 
                     }
                     .nav-menu ul li ul li {
-                        padding: 5px 10px 5px 10px;/* отступы между блоками */
+                        padding: 0px 10px 0px 10px;/* отступы между блоками */
                     } 
                 }
             }
@@ -419,7 +457,7 @@
                         padding: 17px 0px 17px 22px;/* отступы по периметру */
                     }
                     .nav-menu ul li ul li {
-                        padding: 5px 10px 5px 10px;/* отступы между блоками */
+                        padding: 0px 10px 0px 10px;/* отступы между блоками */
                     } 
                 }
             }
@@ -453,7 +491,7 @@
                         padding: 17px 0px 17px 18px;/* отступы по периметру */
                     }
                     .nav-menu ul li ul li {
-                        padding: 5px 10px 5px 10px;/* отступы между блоками */
+                        padding: 0px 10px 0px 10px;/* отступы между блоками */
                     } 
                 }
             }
@@ -487,7 +525,7 @@
                         padding: 17px 0px 17px 12px;/* отступы по периметру */ 
                     }
                     .nav-menu ul li ul li {
-                        padding: 5px 10px 5px 10px;/* отступы между блоками */
+                        padding: 0px 10px 0px 10px;/* отступы между блоками */
                     } 
                 }
             }
@@ -521,7 +559,7 @@
                         padding: 17px 0px 17px 8px;/* отступы по периметру */
                     }
                     .nav-menu ul li ul li {
-                        padding: 5px 10px 5px 10px;/* отступы между блоками */
+                        padding: 0px 10px 0px 10px;/* отступы между блоками */
                     } 
                 }
             }
@@ -556,7 +594,7 @@
                         padding: 17px 0px 17px 54px;/* отступы по периметру */
                     }
                     .nav-menu ul li ul li { 
-                        padding: 5px 42px 5px 42px;/* отступы между блоками */
+                        padding: 0px 42px 0px 42px;/* отступы между блоками */
                     } 
                 }
             }
@@ -590,7 +628,7 @@
                         padding: 17px 0px 17px 53px;/* отступы по периметру */
                     }
                     .nav-menu ul li ul li { 
-                        padding: 5px 40px 5px 40px;/* отступы между блоками */
+                        padding: 0px 40px 0px 40px;/* отступы между блоками */
                     } 
                 }
             }
@@ -624,7 +662,7 @@
                         padding: 17px 0px 17px 51px;/* отступы по периметру */
                     }
                     .nav-menu ul li ul li { 
-                        padding: 5px 39px 5px 39px;/* отступы между блоками */
+                        padding: 0px 39px 0px 39px;/* отступы между блоками */
                     } 
                 }
             }
@@ -658,7 +696,7 @@
                         padding: 17px 0px 17px 52px;/* отступы по периметру */
                     }
                     .nav-menu ul li ul li { 
-                        padding: 5px 37px 5px 37px;/* отступы между блоками */
+                        padding: 0px 37px 0px 37px;/* отступы между блоками */
                     } 
                 }
             }
@@ -692,7 +730,7 @@
                         padding: 17px 0px 17px 50px;/* отступы по периметру */
                     }
                     .nav-menu ul li ul li { 
-                        padding: 5px 36px 5px 36px;/* отступы между блоками */
+                        padding: 0px 36px 0px 36px;/* отступы между блоками */
                     } 
                 }
             }
@@ -726,7 +764,7 @@
                         padding: 17px 0px 17px 49px;/* отступы по периметру */
                     }
                     .nav-menu ul li ul li { 
-                        padding: 5px 35px 5px 35px;/* отступы между блоками */
+                        padding: 0px 35px 0px 35px;/* отступы между блоками */
                     } 
                 }
             }
@@ -760,7 +798,7 @@
                         padding: 17px 0px 17px 49px;/* отступы по периметру */
                     }
                     .nav-menu ul li ul li { 
-                        padding: 5px 33px 5px 33px;/* отступы между блоками */
+                        padding: 0px 33px 0px 33px;/* отступы между блоками */
                     } 
                 }
             }
@@ -794,7 +832,7 @@
                         padding: 17px 0px 17px 47px;/* отступы по периметру */
                     }
                     .nav-menu ul li ul li { 
-                        padding: 5px 32px 5px 32px;/* отступы между блоками */
+                        padding: 0px 32px 0px 32px;/* отступы между блоками */
                     } 
                 }
             }
@@ -828,7 +866,7 @@
                         padding: 17px 0px 17px 42px;/* отступы по периметру */
                     }
                     .nav-menu ul li ul li { 
-                        padding: 5px 32px 5px 32px;/* отступы между блоками */
+                        padding: 0px 32px 0px 32px;/* отступы между блоками */
                     } 
                 }
             }
