--- a/src/styles/media-page-array-product-cards.less
+++ b/src/styles/media-page-array-product-cards.less
@@ -1,3 +1,10 @@
+/////////////////////////////////////
+
+///////////////////////////////////////
+
+
+
+
 @media all and (max-width: 599px) {
     body {
         .page-array-product-cards {
