--- a/src/styles/header.less
+++ b/src/styles/header.less
@@ -224,6 +224,7 @@ body {
                 overflow: hidden;
                 overflow: hidden;
                 position: relative;
+                background: @color_blue_main;///////////////////////////////55555566644441111
                 z-index: 77777;
                 .photo-slider {
                     margin: 0;
@@ -260,27 +261,43 @@ body {
                     animation-delay: 0S;
                 } 
                 #logo { 
+                    
                     margin-left: 20px;
                     margin-top: 50px;
+                    position: relative;
                     z-index: 88888;
                     a {  
                         text-decoration: none;
                         cursor: pointer;
+                        // .block-logo {
+                        //     padding: 0;
+                        //     margin: 0;
+                           
+                        //     width: 200px;
+                        //     height: 220px;
+                        //     // background: red;
+                           
+                           
+                           
+                        // }
                         .block-logo {
                             padding: 0;
                             margin: 0;
                             width: 300px;
                             height: 170px;
+                            
                             border-radius: 50%;
                             border-left: 26px solid @color_blue_main;
                             border-right: 26px solid @color_blue_main;
                             border-bottom: 6px solid @color_yellow_main;
                             border-top: 6px solid @color_yellow_main;
                             margin: 50px 0 0 30px;
+                           
                             position: relative;/* */
                             background-image: url('../images/logo_1.png');
                             background-position: center;
-	                        background-size: 345px 216px;
+                            background-size: 345px 216px;
+                            
                             background-repeat: no-repeat;
                         }
                         .block-logo::before {
