--- a/src/styles/header.less
+++ b/src/styles/header.less
@@ -210,21 +210,22 @@ body {
             margin: 0;
             display: flex;
             flex-direction: column;
-            width: 100%;
             width: 100vw;
-            height: 270px;
+            height: 370px;
             align-items: center;
             justify-content: center;
             background: @color_white_main;
+            // background: red;
             .container-slider {
                 margin: 0;
                 padding: 0;
-                height: 100%;
-                width: 100vw;
-                overflow: hidden;
+                height: 370px;
+                width: 100%;
+                
+               
                 overflow: hidden;
                 position: relative;
-                background: @color_blue_main;///////////////////////////////55555566644441111
+                background: @color_fon_logo;///////////////////////////////55555566644441111
                 z-index: 77777;
                 .photo-slider {
                     margin: 0;
@@ -232,11 +233,15 @@ body {
                     position: absolute; 
                     animation: round 48s infinite;
                     opacity: 0;
-                    width: 100%;
+                    height: 370px;
+                   
+                  
                     width: 100vw;
-                    height: 100%;
+                   
                     overflow: hidden;/* */
                     object-fit: cover;/* */
+                    width: 100vw;
+                    height: 370px;
                 }
                 @keyframes round {
                     13%{opacity:1}
@@ -263,57 +268,146 @@ body {
                 #logo { 
                     
                     margin-left: 20px;
-                    margin-top: 50px;
+                    margin-top: 95px;
                     position: relative;
                     z-index: 88888;
+                   
+                    // a {  
+                    //     text-decoration: none;
+                    //     cursor: pointer;
+                    //     .block-logo {
+                    //         padding: 0;
+                    //         margin: 0;
+                           
+                    //         width: 200px;
+                    //         height: 220px;
+                    //         // background: red;
+                           
+                           
+                           
+                    //     }
+                    //     .block-logo {
+                    //         padding: 0;
+                    //         margin: 0;
+                    //         width: 300px;
+                    //         height: 170px;
+                            
+                    //         border-radius: 50%;
+                    //         border-left: 26px solid @color_blue_main;
+                    //         border-right: 26px solid @color_blue_main;
+                    //         border-bottom: 6px solid @color_yellow_main;
+                    //         border-top: 6px solid @color_yellow_main;
+                    //         margin: 50px 0 0 30px;
+                           
+                    //         position: relative;/* */
+                    //         // background-image: url('../images/logo_1.png');
+                    //         background-image: url('../images/49240.png');
+                    //         background-position: center;
+                    //         background-size: 345px 216px;
+                            
+                    //         background-repeat: no-repeat;
+                    //     }
+                    //     .block-logo::before {
+                    //         content: "";
+                    //         padding: 0;
+                    //         margin: 0;
+                    //         position: absolute;
+                    //         width: 100%;
+                    //         height: 100%;
+                    //         border-radius: 50%;
+                    //         border-left: 13px solid  @color_yellow_main;
+                    //         border-right: 13px solid  @color_yellow_main;
+                    //         border-bottom: 3px solid @color_blue_main;
+                    //         border-top: 3px solid @color_blue_main;
+                    //         margin: -3px 0 0 -13px; 
+                    //     }               
+                    // }
                     a {  
                         text-decoration: none;
                         cursor: pointer;
-                        // .block-logo {
-                        //     padding: 0;
-                        //     margin: 0;
-                           
-                        //     width: 200px;
-                        //     height: 220px;
-                        //     // background: red;
-                           
-                           
-                           
-                        // }
                         .block-logo {
                             padding: 0;
                             margin: 0;
                             width: 300px;
-                            height: 170px;
+                            height: 169px;
                             
-                            border-radius: 50%;
-                            border-left: 26px solid @color_blue_main;
-                            border-right: 26px solid @color_blue_main;
-                            border-bottom: 6px solid @color_yellow_main;
-                            border-top: 6px solid @color_yellow_main;
-                            margin: 50px 0 0 30px;
+                            
+                            border-radius: 300px;
+                            // border-left: 26px solid @color_blue_main;
+                            // border-right: 26px solid @color_blue_main;
+                            // border-bottom: 6px solid @color_yellow_main;
+                            // border-top: 6px solid @color_yellow_main;
+                            margin: 50px 0 0 0px;
                            
-                            position: relative;/* */
-                            background-image: url('../images/logo_1.png');
-                            background-position: center;
-                            background-size: 345px 216px;
+                            // position: relative;/* */
+
+                            // background-image: url('../images/logo_1.png');
+                            // background-image: url('../images/uuu-202a.png');
+                            background-image: url('../images/uuuuu-80a.png');
+
+
+                            // -webkit-filter: grayscale(100%);
+  
+                            // background-position: center;
+                            // background-color: red;
+                            background-size: 300px 170px;
+                            // filter: brightness(1.2) invert(20);
+                            
                             
                             background-repeat: no-repeat;
+                           
+
+
+
+                            // position: relative;
+                            // border: 2px solid red;
+                            // box-shadow: 0px -66px 37px -20px rgba(34, 60, 80, 0.22) inset;
+                            .photo-logo {
+                                height: 40px;
+                                width: 84%;
+                                margin-left: 8%;
+                                margin-top: 65px;
+                            }
+                            .block-logo-text {
+                                width: 90%;
+                                height: 20px;
+                                line-height: 18px;
+                                // background-color: #1869b4;
+                                // background-color: @color_black_main * 2.8;
+                                // position: absolute;
+                                margin-top: -5px;
+                                margin-left: 20px;
+                                padding: 0 3px;
+                                border-radius: 3px;
+                                // border: 2px solid @color_black_main * 2.8;
+                               
+                                // box-shadow: -1px -81px 36px 86px red;
+                                .logo-text {
+                                    color: @color_fon_logo;
+                                    color: @color_yellow_main;
+                                    font-family: 'Roboto', sans-serif;
+                                    font-weight: 700;
+                                    font-size: @font-size_main - 5.3px;
+                                    text-transform: uppercase;
+                                }
+
+                            }
+                            
                         }
-                        .block-logo::before {
-                            content: "";
-                            padding: 0;
-                            margin: 0;
-                            position: absolute;
-                            width: 100%;
-                            height: 100%;
-                            border-radius: 50%;
-                            border-left: 13px solid  @color_yellow_main;
-                            border-right: 13px solid  @color_yellow_main;
-                            border-bottom: 3px solid @color_blue_main;
-                            border-top: 3px solid @color_blue_main;
-                            margin: -3px 0 0 -13px; 
-                        }               
+                        // .block-logo::before {
+                        //     content: "";
+                        //     padding: 0;
+                        //     margin: 0;
+                        //     position: absolute;
+                        //     width: 100%;
+                        //     height: 100%;
+                        //     // border-radius: 50%;
+                        //     // border-left: 13px solid  @color_yellow_main;
+                        //     // border-right: 13px solid  @color_yellow_main;
+                        //     // border-bottom: 3px solid @color_blue_main;
+                        //     // border-top: 3px solid @color_blue_main;
+                        //     margin: -3px 0 0 -13px; 
+                        // }               
                     }
                 }
                 #search {
@@ -321,8 +415,8 @@ body {
                     width: 100vw;
                     min-height: 30px;
                     position: relative;
-                    margin-top: 0px;
-                    margin-top: 7px;
+                    margin-top: 40px;
+                    // margin-top: 7px;
                     z-index: 88888;
                     .search-box {
                         display: flex;
@@ -333,7 +427,7 @@ body {
                             color: @color_black_main;
                             font-family: 'Roboto', sans-serif;
                             font-weight: 400;
-                            font-size: 18px;
+                            // font-size: 18px;
                             float: left;
                             padding: 5px;
                             font-size: @font-size_main;
