--- a/src/styles/page-parts-list-pdf.less
+++ b/src/styles/page-parts-list-pdf.less
@@ -1,11 +1,11 @@
 body {
-    display: flex;
-    justify-content: space-around;
-    margin-top: 0;
-    margin: 0;
-    padding: 0;
-    flex-direction: column;
-    align-items: center;
+    // display: flex;
+    // justify-content: space-around;
+    // margin-top: 0;
+    // margin: 0;
+    // padding: 0;
+    // flex-direction: column;
+    // align-items: center;
     .page-parts-list-pdf { 
         padding: 0;
         margin: 0;
