--- a/src/styles/footer.less
+++ b/src/styles/footer.less
@@ -1,12 +1,12 @@
 
 body {
-    display: flex;
-    justify-content: space-around;
-    margin-top: 0;
-    margin: 0;
-    padding: 0;
-    flex-direction: column;
-    align-items: center;
+    // display: flex;
+    // justify-content: space-around;
+    // margin-top: 0;
+    // margin: 0;
+    // padding: 0;
+    // flex-direction: column;
+    // align-items: center;
     .footer{ 
         padding: 0;
         margin: 0;
