--- a/src/styles/header.less
+++ b/src/styles/header.less
@@ -1,14 +1,14 @@
 body {
-    display: flex;
-    justify-content: space-around;
-    margin-top: 0;
-    margin: 0;
-    padding: 0;
-    flex-direction: column;
-    align-items: center;
+    // display: flex;
+    // justify-content: space-around;
+    // margin-top: 0;
+    // margin: 0;
+    // padding: 0;
+    // flex-direction: column;
+    // align-items: center;
     header {
-        padding: 0;
-        margin: 0;
+        // padding: 0;
+        // margin: 0;
         .block-header-upper-level{
             display: flex;
             justify-content: space-around;
