--- a/src/styles/main-crumbs.less
+++ b/src/styles/main-crumbs.less
@@ -8,8 +8,9 @@ body {
             padding: 15px 40px 15px 40px;
             .crumbs-text {
                 li {
-                    height: 25px;
+                    // height: 25px;
                     line-height: 25px;
+                    height: 100%;
                     list-style: none;
                     float: left;
                     min-width: 1px;
