--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -48,10 +48,6 @@ body {
   padding: 0;
   flex-direction: column;
   align-items: center;
-  header {
-    padding: 0;
-    margin: 0;
-  }
 }
 
 @import url("header.less");
@@ -68,22 +64,25 @@ body {
     z-index: 11111;
   }
 }
-@import url("crumbs.less");
-@import url("helpful.less");
+@import url("main-crumbs.less");
+@import url("main-helpful.less");
 @import url('page-main.less');
 @import url("page-parts-list-brand.less");
 @import url("page-parts-list-pdf.less");
 @import url("page-catalog-pdf.less");
-@import url("page-array-product-cards.less");
-@import url("pagination.less");
+@import url("main-page-array-product-cards.less");
+@import url("main-pagination.less");
 @import url('footer.less');
 
 @import url("media-header.less");
+@import url("media-main-crumbs");
+@import url("media-main-helpful.less");
 @import url("media-page-main.less");
 @import url("media-page-parts-list-brand.less");
 @import url("media-page-parts-list-pdf.less");
 @import url("media-page-catalog-pdf.less");
-@import url("media-page-array-product-cards.less");
+@import url("media-main-page-array-product-cards.less");
+@import url("media-main-pagination.less");
 @import url("media-footer.less");
 
 
