--- a/src/styles/header.less
+++ b/src/styles/header.less
@@ -1,14 +1,7 @@
 body {
-    // display: flex;
-    // justify-content: space-around;
-    // margin-top: 0;
-    // margin: 0;
-    // padding: 0;
-    // flex-direction: column;
-    // align-items: center;
     header {
-        // padding: 0;
-        // margin: 0;
+        padding: 0;
+        margin: 0;
         .block-header-upper-level{
             display: flex;
             justify-content: space-around;
@@ -215,17 +208,14 @@ body {
             align-items: center;
             justify-content: center;
             background: @color_white_main;
-            // background: red;
             .container-slider {
                 margin: 0;
                 padding: 0;
                 height: 370px;
                 width: 100%;
-                
-               
                 overflow: hidden;
                 position: relative;
-                background: @color_fon_logo;///////////////////////////////55555566644441111
+                background: @color_fon_logo;
                 z-index: 77777;
                 .photo-slider {
                     margin: 0;
@@ -234,10 +224,7 @@ body {
                     animation: round 48s infinite;
                     opacity: 0;
                     height: 370px;
-                   
-                  
                     width: 100vw;
-                   
                     overflow: hidden;/* */
                     object-fit: cover;/* */
                     width: 100vw;
@@ -266,12 +253,10 @@ body {
                     animation-delay: 0S;
                 } 
                 #logo { 
-                    
                     margin-left: 20px;
                     margin-top: 95px;
                     position: relative;
                     z-index: 88888;
-                   
                     // a {  
                     //     text-decoration: none;
                     //     cursor: pointer;
@@ -330,38 +315,11 @@ body {
                             margin: 0;
                             width: 300px;
                             height: 169px;
-                            
-                            
                             border-radius: 300px;
-                            // border-left: 26px solid @color_blue_main;
-                            // border-right: 26px solid @color_blue_main;
-                            // border-bottom: 6px solid @color_yellow_main;
-                            // border-top: 6px solid @color_yellow_main;
                             margin: 50px 0 0 0px;
-                           
-                            // position: relative;/* */
-
-                            // background-image: url('../images/logo_1.png');
-                            // background-image: url('../images/uuu-202a.png');
                             background-image: url('../images/uuuuu-80a.png');
-
-
-                            // -webkit-filter: grayscale(100%);
-  
-                            // background-position: center;
-                            // background-color: red;
                             background-size: 300px 170px;
-                            // filter: brightness(1.2) invert(20);
-                            
-                            
                             background-repeat: no-repeat;
-                           
-
-
-
-                            // position: relative;
-                            // border: 2px solid red;
-                            // box-shadow: 0px -66px 37px -20px rgba(34, 60, 80, 0.22) inset;
                             .photo-logo {
                                 height: 40px;
                                 width: 84%;
@@ -372,16 +330,10 @@ body {
                                 width: 90%;
                                 height: 20px;
                                 line-height: 18px;
-                                // background-color: #1869b4;
-                                // background-color: @color_black_main * 2.8;
-                                // position: absolute;
                                 margin-top: -5px;
                                 margin-left: 20px;
                                 padding: 0 3px;
                                 border-radius: 3px;
-                                // border: 2px solid @color_black_main * 2.8;
-                               
-                                // box-shadow: -1px -81px 36px 86px red;
                                 .logo-text {
                                     color: @color_fon_logo;
                                     color: @color_yellow_main;
@@ -390,24 +342,8 @@ body {
                                     font-size: @font-size_main - 5.3px;
                                     text-transform: uppercase;
                                 }
-
-                            }
-                            
-                        }
-                        // .block-logo::before {
-                        //     content: "";
-                        //     padding: 0;
-                        //     margin: 0;
-                        //     position: absolute;
-                        //     width: 100%;
-                        //     height: 100%;
-                        //     // border-radius: 50%;
-                        //     // border-left: 13px solid  @color_yellow_main;
-                        //     // border-right: 13px solid  @color_yellow_main;
-                        //     // border-bottom: 3px solid @color_blue_main;
-                        //     // border-top: 3px solid @color_blue_main;
-                        //     margin: -3px 0 0 -13px; 
-                        // }               
+                            }  
+                        }     
                     }
                 }
                 #search {
@@ -416,7 +352,6 @@ body {
                     min-height: 30px;
                     position: relative;
                     margin-top: 40px;
-                    // margin-top: 7px;
                     z-index: 88888;
                     .search-box {
                         display: flex;
@@ -427,7 +362,6 @@ body {
                             color: @color_black_main;
                             font-family: 'Roboto', sans-serif;
                             font-weight: 400;
-                            // font-size: 18px;
                             float: left;
                             padding: 5px;
                             font-size: @font-size_main;
@@ -489,7 +423,6 @@ body {
                 width: 100%;
                 max-width: 1260px;
                 z-index: 44444;
-                // background: red;
                 .dws-menu * {
                     margin: 0;
                     padding: 0;  
