--- a/src/styles/footer.less
+++ b/src/styles/footer.less
@@ -25,7 +25,7 @@ body {
                 font-size: @font-size_main + 2px;
                 color: @color_white_main; 
                 text-transform: uppercase;
-                letter-spacing: 3px;
+                letter-spacing: 1px;
                 border-bottom: 2px solid @color_dlue_tone_four_main;
                 position: relative;
                 margin-bottom: 16px;
@@ -48,7 +48,7 @@ body {
                 font-family: 'Roboto', sans-serif;
                 font-weight: 400;
                 font-size: @font-size_main - 1px;
-                padding-bottom: 10px;
+                padding-bottom: 5px;
             }
             .box .social {
                 min-width: 280px;
@@ -119,16 +119,16 @@ body {
             }
             .box form button {
                 width: 50%;
-                height: 25px;
+                height: 30px;
                 border: none;
                 outline: none;
                 background: @color_black_main;
                 text-transform: uppercase;
                 font-family: 'Roboto', sans-serif;
-                font-weight: 600;
+                font-weight: 400;
                 font-size: @font-size_main - 1px;
                 color: @color_dlue_tone_five_main;
-                letter-spacing: 4px;
+                // letter-spacing: 4px;
                 border: 1px solid @color_dlue_tone_five_main;
                 border-radius: 3px;
                 cursor: pointer;
