--- a/src/styles/main-page-array-product-cards.less
+++ b/src/styles/main-page-array-product-cards.less
@@ -333,30 +333,27 @@ body {
                                 background: @color_dlue_tone_three_main;
                                 width: 111%;
                                 height: 40px;
-                                line-height: 38px;
+                                line-height: 40px;
                                 position: absolute;
                                 left: -5px;
                                 top: -5px;
-                                border: 1px solid @color_blue_main;
                             }
                             .button-submit:before{
                                 content: "Показать";
                                 background: @color_dlue_tone_three_main;
                                 width: 111%;
                                 height: 40px;
-                                line-height: 38px;
+                                line-height: 40px;
                                 position: absolute;
                                 left: -5px;
                                 top: -5px;
                                 box-sizing: border-box;
-                                border: 1px solid @color_blue_main;
                             }
                             button:hover:before{
                                 background: @color_blue_main;
                                 color: @color_yellow_main;
                                 font-size: @font-size_main - 0px;
                                 font-weight: 400;
-                                border: 1px solid @color_blue_main;
                             } 
                         }   
                     }    
@@ -401,19 +398,19 @@ body {
                         border-bottom: 3px solid @color_yellow_main;
                         position: absolute;
                     }
-                    .content1-description-text {
-                        color: @color_black_main;
-                        text-indent: 30px;
-                        padding: 20px 40px 20px 40px;
-                        font-family: 'Roboto', sans-serif;
-                        font-weight: 300;
-                        font-size: @font-size_main;
-                        letter-spacing: 0px;
-                        word-spacing: 3px;
-                        margin: 0px 0px -15px 0px;
-                        padding-bottom: 40px;
-                        text-align:justify   
-                    }
+                    // .content1-description-text {
+                    //     color: @color_black_main;
+                    //     text-indent: 30px;
+                    //     padding: 20px 40px 20px 40px;
+                    //     font-family: 'Roboto', sans-serif;
+                    //     font-weight: 300;
+                    //     font-size: @font-size_main;
+                    //     letter-spacing: 0px;
+                    //     word-spacing: 3px;
+                    //     margin: 0px 0px -15px 0px;
+                    //     padding-bottom: 40px;
+                    //     text-align:justify   
+                    // }
                 }
                 .content2-catalog-cards-products {
                     padding: 0;
@@ -434,7 +431,7 @@ body {
                         flex-wrap: wrap;
                         justify-content: space-around;
                         .catalog2-cards-products-section {
-                            margin: 20px 10px 30px 10px;
+                            margin: 20px 5px 30px 5px;
                             height: 394px;
                             width: 200px;
                             background-size: cover; 
@@ -614,7 +611,7 @@ body {
                                 color: @color_yellow_main;
                             }
                             .products-section-buy {
-                                margin-top: 3px;
+                                margin-top: 4px;
                                 a {
                                     text-decoration: none;
                                     text-transform: uppercase;
