--- a/src/styles/main-page-array-product-cards.less
+++ b/src/styles/main-page-array-product-cards.less
@@ -176,7 +176,7 @@ body {
                                             line-height: 22px;
                                             color: @color_blue_main;
                                             text-transform: uppercase;
-                                            font-size: @font-size_main - 4px;
+                                            font-size: @font-size_main - 3px;
                                             font-family: 'Roboto', sans-serif;
                                             font-weight: 400;
                                         }
@@ -232,7 +232,7 @@ body {
                                             min-width: 1px;
                                             color: @color_blue_main;
                                             text-transform: uppercase;
-                                            font-size: @font-size_main - 4px;
+                                            font-size: @font-size_main - 3px;
                                             font-family: 'Roboto', sans-serif;
                                             font-weight: 400;
                                         }
@@ -567,7 +567,7 @@ body {
                                         margin: 0;
                                         color: @color_dlue_tone_two_main;
                                         text-transform: uppercase;
-                                        font-size: @font-size_main + 0px;
+                                        font-size: @font-size_main - 1px;
                                         font-family: 'Roboto', sans-serif;
                                         font-weight: 400;
                                         text-transform: uppercase;
@@ -588,7 +588,7 @@ body {
                                     .content2-block-base-partscode {
                                         color: @color_white_main;
                                         text-transform: uppercase;
-                                        font-size: @font-size_main - 3px;
+                                        font-size: @font-size_main - 5px;
                                         font-family: 'Roboto', sans-serif;
                                         font-weight: 400;
                                         text-transform: uppercase;
@@ -597,7 +597,7 @@ body {
                                         width: 100%;
                                         background: rgb(53, 4, 48);
                                         background: @color_blue_main;
-                                        word-break:break-all;
+                                        // word-break:break-all;
                                         padding: 0 5px 0 5px;
                                         p {
                                             position: relative;
