--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -65,24 +65,26 @@ body {
   }
 }
 @import url("main-crumbs.less");
-@import url("main-helpful.less");
 @import url('main-page-general.less');
 @import url("main-page-parts-list-brand.less");
 @import url("main-page-parts-list-pdf.less");
 @import url("main-page-catalog-pdf.less");
 @import url("main-page-array-product-cards.less");
+@import url("main-page-cards-goods.less");
 @import url("main-pagination.less");
+@import url("main-helpful.less");
 @import url('footer.less');
 
 @import url("media-header.less");
 @import url("media-main-crumbs");
-@import url("media-main-helpful.less");
 @import url("media-main-page-general.less");
 @import url("media-main-page-parts-list-brand.less");
 @import url("media-main-page-parts-list-pdf.less");
 @import url("media-main-page-catalog-pdf.less");
 @import url("media-main-page-array-product-cards.less");
+@import url("media-main-page-cards-goods.less");
 @import url("media-main-pagination.less");
+@import url("media-main-helpful.less");
 @import url("media-footer.less");
 
 
