--- a/src/styles/header.less
+++ b/src/styles/header.less
@@ -257,109 +257,109 @@ body {
                     margin-top: 95px;
                     position: relative;
                     z-index: 88888;
-                    // a {  
-                    //     text-decoration: none;
-                    //     cursor: pointer;
-                    //     .block-logo {
-                    //         padding: 0;
-                    //         margin: 0;
-                           
-                    //         width: 200px;
-                    //         height: 220px;
-                    //         // background: red;
-                           
-                           
-                           
-                    //     }
-                    //     .block-logo {
-                    //         padding: 0;
-                    //         margin: 0;
-                    //         width: 300px;
-                    //         height: 170px;
-                            
-                    //         border-radius: 50%;
-                    //         border-left: 26px solid @color_blue_main;
-                    //         border-right: 26px solid @color_blue_main;
-                    //         border-bottom: 6px solid @color_yellow_main;
-                    //         border-top: 6px solid @color_yellow_main;
-                    //         margin: 50px 0 0 30px;
-                           
-                    //         position: relative;/* */
-                    //         // background-image: url('../images/logo_1.png');
-                    //         background-image: url('../images/49240.png');
-                    //         background-position: center;
-                    //         background-size: 345px 216px;
-                            
-                    //         background-repeat: no-repeat;
-                    //     }
-                    //     .block-logo::before {
-                    //         content: "";
-                    //         padding: 0;
-                    //         margin: 0;
-                    //         position: absolute;
-                    //         width: 100%;
-                    //         height: 100%;
-                    //         border-radius: 50%;
-                    //         border-left: 13px solid  @color_yellow_main;
-                    //         border-right: 13px solid  @color_yellow_main;
-                    //         border-bottom: 3px solid @color_blue_main;
-                    //         border-top: 3px solid @color_blue_main;
-                    //         margin: -3px 0 0 -13px; 
-                    //     }               
-                    // }
                     a {  
                         text-decoration: none;
                         cursor: pointer;
                         .block-logo {
                             padding: 0;
                             margin: 0;
+                           
+                            width: 200px;
+                            height: 220px;
+                            // background: red;
+                           
+                           
+                           
+                        }
+                        .block-logo {
+                            padding: 0;
+                            margin: 0;
                             width: 300px;
-                            height: 169px;
+                            height: 170px;
+                            
                             border-radius: 50%;
-                            margin: 50px 0 0 0px;
-                            background-image: url('../images/uuuuu-80a.png');
-                            background-size: 300px 170px;
+                            border-left: 26px solid @color_blue_main;
+                            border-right: 26px solid @color_blue_main;
+                            border-bottom: 6px solid @color_yellow_main;
+                            border-top: 6px solid @color_yellow_main;
+                            margin: 50px 0 0 30px;
+                           
+                            position: relative;/* */
+                            background-image: url('../images/logo_1.png');
+                            // background-image: url('../images/49240.png');
+                            background-position: center;
+                            background-size: 345px 216px;
+                            
                             background-repeat: no-repeat;
-
-                            border-bottom: 12px solid @color_yellow_main;
-                            .photo-logo {
-                                height: 40px;
-                                width: 84%;
-                                margin-left: 8%;
-                                margin-top: 65px;
-                            }
-                            .block-logo-text {
-                                width: 90%;
-                                height: 20px;
-                                line-height: 18px;
-                                margin-top: -5px;
-                                margin-left: 20px;
-                                padding: 0 3px;
-                                border-radius: 3px;
-                                .logo-text {
-                                    color: @color_fon_logo;
-                                    color: @color_yellow_main;
-                                    font-family: 'Roboto', sans-serif;
-                                    font-weight: 700;
-                                    font-size: @font-size_main - 5.3px;
-                                    text-transform: uppercase;
-                                }
-                            }  
                         }
                         .block-logo::before {
-                                    content: "";
-                                    padding: 0;
-                                    margin: 0;
-                                    position: absolute;
-                                    padding: 0;
-                                    margin: 0;
-                                    width: 300px;
-                                    height: 169px;
-                                    border-radius: 50%;
-                                    border-bottom: 4px solid @color_blue_main;
-                                    margin: -4px 0 0 0px; 
-                        }                  
+                            content: "";
+                            padding: 0;
+                            margin: 0;
+                            position: absolute;
+                            width: 100%;
+                            height: 100%;
+                            border-radius: 50%;
+                            border-left: 13px solid  @color_yellow_main;
+                            border-right: 13px solid  @color_yellow_main;
+                            border-bottom: 3px solid @color_blue_main;
+                            border-top: 3px solid @color_blue_main;
+                            margin: -3px 0 0 -13px; 
+                        }               
                     }
+                    // a {  
+                    //     text-decoration: none;
+                    //     cursor: pointer;
+                    //     .block-logo {
+                    //         padding: 0;
+                    //         margin: 0;
+                    //         width: 300px;
+                    //         height: 169px;
+                    //         border-radius: 50%;
+                    //         margin: 50px 0 0 0px;
+                    //         background-image: url('../images/uuuuu-80a.png');
+                    //         background-size: 300px 170px;
+                    //         background-repeat: no-repeat;
+
+                    //         border-bottom: 4px solid @color_yellow_main;
+                    //         .photo-logo {
+                    //             height: 40px;
+                    //             width: 84%;
+                    //             margin-left: 8%;
+                    //             margin-top: 65px;
+                    //         }
+                    //         .block-logo-text {
+                    //             width: 90%;
+                    //             height: 20px;
+                    //             line-height: 18px;
+                    //             margin-top: -5px;
+                    //             margin-left: 20px;
+                    //             padding: 0 3px;
+                    //             border-radius: 3px;
+                    //             .logo-text {
+                    //                 color: @color_fon_logo;
+                    //                 color: @color_yellow_main;
+                    //                 font-family: 'Roboto', sans-serif;
+                    //                 font-weight: 700;
+                    //                 font-size: @font-size_main - 5.3px;
+                    //                 text-transform: uppercase;
+                    //             }
+                    //         }  
+                    //     }
+                    //     .block-logo::before {
+                    //                 content: "";
+                    //                 padding: 0;
+                    //                 margin: 0;
+                    //                 position: absolute;
+                    //                 padding: 0;
+                    //                 margin: 0;
+                    //                 width: 300px;
+                    //                 height: 169px;
+                    //                 border-radius: 50%;
+                    //                 border-bottom: 2px solid @color_blue_main;
+                    //                 margin: -2px 0 0 0px; 
+                    //     }                  
+                    // }
                 }
                 #search {
                     margin-left: auto;
