--- a/src/styles/media-header.less
+++ b/src/styles/media-header.less
@@ -114,22 +114,16 @@
         header {
             .block-header-slider-level {
                 .container-slider {
-                    #logo { 
-                        a {  
-                            .block-logo { 
-                                margin: 50px 0 0 10px;
-                            } 
-                        }
-                    }
+                    
                     #search {
                         .search-box {
                             .search-txt {
-                                min-width: 310px;
-                                font-size: @font-size_main - 1px;  
+                                min-width: 70vw;
+                                // font-size: @font-size_main - 1px;  
                             }
-                            .search-btn {
-                                width: 55px; 
-                            }
+                            // .search-btn {
+                            //     width: 55px; 
+                            // }
                                 
                         }
                     }   
@@ -146,19 +140,19 @@
                     #logo { 
                         a {  
                             .block-logo { 
-                                margin: 50px 0 0 -18px;
+                                margin: 0px 0 0 -20px;
                             } 
                         }
                     }
                     #search {
                         .search-box {
                             .search-txt {
-                                min-width: 250px;
-                                font-size: @font-size_main - 2px; 
+                                min-width: 75vw;
+                            //     font-size: @font-size_main - 2px; 
                             }
-                            .search-btn {
-                                width: 45px; 
-                            }
+                            // .search-btn {
+                            //     width: 45px; 
+                            // }
                                 
                         }
                     }   
