--- a/src/styles/header.less
+++ b/src/styles/header.less
@@ -254,149 +254,212 @@ body {
                 } 
                 #logo { 
                     margin-left: 20px;
-                    margin-top: 95px;
+                    margin-top: 90px;
                     position: relative;
                     z-index: 88888;
-                    a {  
-                        text-decoration: none;
-                        cursor: pointer;
-                        .block-logo {
-                            padding: 0;
-                            margin: 0;
-                           
-                            width: 200px;
-                            height: 220px;
-                            // background: red;
-                           
-                           
-                           
-                        }
-                        .block-logo {
-                            padding: 0;
-                            margin: 0;
-                            width: 300px;
-                            height: 170px;
-                            
-                            border-radius: 50%;
-                            border-left: 26px solid @color_blue_main;
-                            border-right: 26px solid @color_blue_main;
-                            border-bottom: 6px solid @color_yellow_main;
-                            border-top: 6px solid @color_yellow_main;
-                            margin: 50px 0 0 30px;
-                           
-                            position: relative;/* */
-                            background-image: url('../images/logo_1.png');
-                            // background-image: url('../images/49240.png');
-                            background-position: center;
-                            background-size: 345px 216px;
-                            
-                            background-repeat: no-repeat;
-                        }
-                        .block-logo::before {
-                            content: "";
-                            padding: 0;
-                            margin: 0;
-                            position: absolute;
-                            width: 100%;
-                            height: 100%;
-                            border-radius: 50%;
-                            border-left: 13px solid  @color_yellow_main;
-                            border-right: 13px solid  @color_yellow_main;
-                            border-bottom: 3px solid @color_blue_main;
-                            border-top: 3px solid @color_blue_main;
-                            margin: -3px 0 0 -13px; 
-                        }               
-                    }
                     // a {  
                     //     text-decoration: none;
                     //     cursor: pointer;
                     //     .block-logo {
                     //         padding: 0;
                     //         margin: 0;
+                           
+                    //         width: 200px;
+                    //         height: 220px;
+                    //         // background: red;
+                           
+                           
+                           
+                    //     }
+                    //     .block-logo {
+                    //         padding: 0;
+                    //         margin: 0;
                     //         width: 300px;
-                    //         height: 169px;
+                    //         height: 170px;
+                            
                     //         border-radius: 50%;
-                    //         margin: 50px 0 0 0px;
-                    //         background-image: url('../images/uuuuu-80a.png');
-                    //         background-size: 300px 170px;
+                    //         border-left: 26px solid @color_blue_main;
+                    //         border-right: 26px solid @color_blue_main;
+                    //         border-bottom: 6px solid @color_yellow_main;
+                    //         border-top: 6px solid @color_yellow_main;
+                    //         margin: 50px 0 0 30px;
+                           
+                    //         position: relative;/* */
+                    //         background-image: url('../images/logo_1.png');
+                    //         // background-image: url('../images/49240.png');
+                    //         background-position: center;
+                    //         background-size: 345px 216px;
+                            
                     //         background-repeat: no-repeat;
-
-                    //         border-bottom: 4px solid @color_yellow_main;
-                    //         .photo-logo {
-                    //             height: 40px;
-                    //             width: 84%;
-                    //             margin-left: 8%;
-                    //             margin-top: 65px;
-                    //         }
-                    //         .block-logo-text {
-                    //             width: 90%;
-                    //             height: 20px;
-                    //             line-height: 18px;
-                    //             margin-top: -5px;
-                    //             margin-left: 20px;
-                    //             padding: 0 3px;
-                    //             border-radius: 3px;
-                    //             .logo-text {
-                    //                 color: @color_fon_logo;
-                    //                 color: @color_yellow_main;
-                    //                 font-family: 'Roboto', sans-serif;
-                    //                 font-weight: 700;
-                    //                 font-size: @font-size_main - 5.3px;
-                    //                 text-transform: uppercase;
-                    //             }
-                    //         }  
                     //     }
                     //     .block-logo::before {
-                    //                 content: "";
-                    //                 padding: 0;
-                    //                 margin: 0;
-                    //                 position: absolute;
-                    //                 padding: 0;
-                    //                 margin: 0;
-                    //                 width: 300px;
-                    //                 height: 169px;
-                    //                 border-radius: 50%;
-                    //                 border-bottom: 2px solid @color_blue_main;
-                    //                 margin: -2px 0 0 0px; 
-                    //     }                  
+                    //         content: "";
+                    //         padding: 0;
+                    //         margin: 0;
+                    //         position: absolute;
+                    //         width: 100%;
+                    //         height: 100%;
+                    //         border-radius: 50%;
+                    //         border-left: 13px solid  @color_yellow_main;
+                    //         border-right: 13px solid  @color_yellow_main;
+                    //         border-bottom: 3px solid @color_blue_main;
+                    //         border-top: 3px solid @color_blue_main;
+                    //         margin: -3px 0 0 -13px; 
+                    //     }               
                     // }
+
+
+
+                    a {  
+                        text-decoration: none;
+                        cursor: pointer;
+                        .block-logo {
+                            padding: 0;
+                            margin: 0;
+                            max-width: 350px;
+                            height: 175px;
+                           
+                            // border-radius: 50%;
+                            margin:20px 0px 0 0px;
+                            
+                            // background-color: #fff;
+                            
+                            background-image: url('../images/11-aaa-waaa.png');
+                            // background-size: 300px 250px;
+                            background-size: 100% 100%;
+                            background-repeat: no-repeat;
+
+                            // border-bottom: 4px solid @color_yellow_main;
+                            // .photo-logo {
+                            //     height: 40px;
+                            //     width: 100vw;
+                            //     margin-left: 8%;
+                            //     margin-top: 65px;
+                                
+                            // }
+                            .block-logo-text {
+                                position: absolute;
+
+
+                                width: 100vw;
+                                height: 20px;
+                                line-height: 18px;
+                                margin-top: 150px;
+                                margin-left: -20px;
+                                padding: 0 3px;
+                                border-radius: 3px;
+                                // background: yellow;
+                                top: -240px;
+                                
+
+
+                                // margin-left: -120px;
+                                .logo-text {
+                                    // color: @color_fon_logo;
+                                    color: rgb(128, 52, 1);
+                                    font-family: 'Roboto', sans-serif;
+                                    font-weight: 900;
+                                    font-size: @font-size_main - 4px;
+                                    text-transform: uppercase;
+                                    display: flex;
+                                    justify-content: space-between;
+                                    // display: inline-block;
+                                    // transform: scale(.5, 1);
+                                }
+                            }  
+                        }
+                        // .block-logo::before {
+                        //             content: "";
+                        //             padding: 0;
+                        //             margin: 0;
+                        //             position: absolute;
+                        //             padding: 0;
+                        //             margin: 0;
+                        //             width: 300px;
+                        //             height: 169px;
+                        //             border-radius: 50%;
+                        //             border-bottom: 2px solid @color_blue_main;
+                        //             margin: -2px 0 0 0px; 
+                        // }                  
+                    }
                 }
                 #search {
                     margin-left: auto;
-                    width: 100vw;
-                    min-height: 30px;
+                    width: 100%;
+                    // max-width: 1260px;
+                    height: 40px;
+                            line-height: 40px;
                     position: relative;
-                    margin-top: 40px;
+                    margin-top: 20px;
                     z-index: 88888;
+                    background: yellowgreen;
+                     display: flex;
+                    
+                        // align-items: center;
+                        // justify-content: center;
+                        
                     .search-box {
-                        display: flex;
-                        align-items: center;
-                        justify-content: center;
-                        width: 100%;  
+                        padding: 0;
+                        margin: 0;
+                       
+                       display: flex;
+                    //    align-items: center;
+                       justify-content: center;
+                       
+                    //    flex-wrap: wrap;
+                    //    min-width: 1px;
+                        background: rgb(50, 143, 205);
+                        width: 100vw;
+                        height: 55px;
+                        line-height: 55px;
+                        
+                        
+
+                        
+                        // min-width: 1px;
+                        
+                       
+                         
                         .search-txt {
+                            margin: 0;
+                            padding: 0;
+                            width: 100vw;
+                            max-width: 55vw;
                             color: @color_black_main;
                             font-family: 'Roboto', sans-serif;
                             font-weight: 400;
-                            float: left;
-                            padding: 5px;
+                            // float: left;
+                            // padding: 5px;
+                            height: 36px;
+                            line-height: 36px;
                             font-size: @font-size_main;
-                            border-radius: 5px;
+                            
+                            
                             border: 2px solid @color_blue_main;
                             background-color: @color_fon_logo;/* цвет под логотип */
-                            min-width: 380px; 
-                            text-align: center;   
+                            
+                            
+                            
+                            
+                            
+                            
+                              
                         }
                         .search-btn {
+                            margin: 0;
+                            padding: 0;
                             width: 60px;
-                            height: 34px;
-                            float: left;
-                            padding: 5px;
+                            height: 36px;
+                            line-height: 36px;
+                            // float: left;
+                            // padding: 5px;
                             font-size: 17px;
                             color: @color_blue_main;
-                            border-radius: 5px;
+                            
+                            
                             border: 2px solid @color_blue_main;
                             background-color: @color_fon_logo;/* цвет под логотип */
-                            margin-left: 1px;
+                            // margin-left: 1px;
                             transition: linear 0.5s;
                             .fas {
                                 padding: 0;
