--- a/src/styles/media-header.less
+++ b/src/styles/media-header.less
@@ -22,16 +22,20 @@
             .block-header-upper-level {
                 padding: 0px 3px 0px 3px;
                 .quick-contact {
+                    width: 100vw;
                     position: absolute;
-                    margin: 107px 0px 0px 0%;
+                    margin: 80px 0px 0px 0%;
                     z-index: 88888;
                     .contact-menu {
+                        width: 100%;
+                        max-width: 1260px;
                         background: @color_blue_main;
-                        padding: 8px 5px 8px 5px; 
-                        border-radius: 5px;
-                        border: solid 1px @color_fon_logo;////цвет под логотип
+                        border-top: solid 1px @color_white_main;
                         .contact-menu-li {
-                            .contact-menu-a {  
+                            height: 25px;
+                            line-height: 25px;
+                            .contact-menu-a { 
+                                color: @color_white_main;  
                                 font-size: @font-size_main - 1px;  
                             }
                         }
@@ -75,17 +79,21 @@
             .block-header-upper-level {
                 padding: 0px 3px 0px 3px;
                 .quick-contact {
+                    width: 100vw;
                     position: absolute;
-                    margin: 107px 0px 0px 0%;
+                    margin: 80px 0px 0px 0%;
                     z-index: 88888;
                     .contact-menu {
+                        width: 100%;
+                        max-width: 1260px;
                         background: @color_blue_main;
-                        padding: 8px 5px 8px 5px; 
-                        border-radius: 5px;
-                        border: solid 1px @color_fon_logo;////цвет под логотип
+                        border-top: solid 1px @color_white_main;
                         .contact-menu-li {
+                            min-height: 22px;
+                            line-height: 22px;
                             .contact-menu-a {
-                                font-size: @font-size_main - 2px;
+                                color: @color_white_main;  
+                                font-size: @font-size_main - 3px;  
                             }
                         }
                     }
@@ -119,12 +127,7 @@
                         .search-box {
                             .search-txt {
                                 min-width: 70vw;
-                                // font-size: @font-size_main - 1px;  
                             }
-                            // .search-btn {
-                            //     width: 55px; 
-                            // }
-                                
                         }
                     }   
                 }
@@ -140,7 +143,10 @@
                     #logo { 
                         a {  
                             .block-logo { 
-                                margin: 0px 0 0 -20px;
+                                margin: 100px 0 0 -20px;
+                                .block-logo-text {
+                                    display: none;
+                                }
                             } 
                         }
                     }
@@ -148,12 +154,8 @@
                         .search-box {
                             .search-txt {
                                 min-width: 75vw;
-                            //     font-size: @font-size_main - 2px; 
+                           
                             }
-                            // .search-btn {
-                            //     width: 45px; 
-                            // }
-                                
                         }
                     }   
                 }
